# RaultG-Prog2

./: .gitignore  Engine.txt  IA.txt  TODO.txt
C#/: Notes C#.txt  Notes.txt
Quake/: CMakeLists.txt
Quake/Binaries/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Fragment.shader  INSTALL.vcxproj  INSTALL.vcxproj.filters  Quake.vcxproj  Quake.vcxproj.filters  TArray.h  Vertex.shader  Vertex_light.shader  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Quake/Binaries/Quake.dir/: Quake.exe.recipe
Quake/Binaries/Source/: cmake_install.cmake
Quake/Corr/Source/: CoreMinimal.h  Main.cpp
Quake/Corr/Source/Editor/GarbageCollector/: GarbageCollector.h
Quake/Corr/Source/Editor/Pointers/: TObjectPtr.h  TSharedPtr.h  TWeakPtr.h
Quake/Source/: CMakeLists.txt  CoreMinimal.h  Main.cpp  ObjectMacro.h  UObject.cpp  UObject.h
Quake/Source/Editor/Engine/: Engine.cpp  Engine.h  EngineWindow.cpp  EngineWindow.h  Shader.cpp
Quake/Source/Editor/Garbage/: GarbageCollector.cpp  GarbageCollector.h
Quake/Source/Editor/GarbageCollector/: GarbageCollector.h
Quake/Source/Editor/Pointers/: TObjectPtr.cpp  TObjectPtr.h  TPtr.h  TSharedPtr.h  TWeakPtr.h
Quake/Source/Runtime/: AActor.h  GarbageCollector.h  UActorComponent.h  UGameInstance.h
Quake/Source/Runtime/Actor/: AActor.h
Quake/Source/Runtime/Component/: UActorComponent.cpp  UActorComponent.h
Quake/Source/Runtime/Core/: UObject.h
Quake/Source/Runtime/Object/: AssetDataBase.cpp  AssetDataBase.h  UObject.cpp  UObject.h
Quake/Source/Runtime/Objects/: AssetDataBase.cpp  UObject.h
(+3892 files in other folders)
